# kura

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: dump_tools.py  sample_tools.json
src/kura/: __init__.py  __main__.py  auth.py  cli.py  dump.py  models.py
src/kura/analyzers/: __init__.py  quality.py  similarity.py  tokens.py
src/kura/parsers/: __init__.py  mcp.py  skills.py
src/kura/reporters/: json_out.py  terminal.py
tests/: test_parsers.py  test_quality.py  test_similarity.py
